docs: add WADO-RS rendered openapi
